--- a/medtimeline/src/app/data-selector-menu/data-selector-menu.component.css
+++ b/medtimeline/src/app/data-selector-menu/data-selector-menu.component.css
@@ -2,13 +2,6 @@
   padding-left: 0px !important;
 }
 
-.masterButton {
-  font-size: 30px;
-  color:rgba(0,0,0,.54);
-  height: 30px;
-  width: 30px;
-}
-
 .mainConceptSelector {
   border-left-style: solid;
   border-left-width: 5px;
