--- a/medtimeline/src/app/timeline-controller/timeline-controller.component.css
+++ b/medtimeline/src/app/timeline-controller/timeline-controller.component.css
@@ -30,3 +30,7 @@ looking at.
   border-color: cornflowerblue;
   border-width: 3px !important;
 }
+
+::ng-deep .mat-h2 {
+  margin-bottom: 0px !important;
+}
